--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
 /* svg section  */
 .svg-section{
     width: 100%;
-    height: 510px;
+    /* height: 510px; */
     position: relative;
     overflow: hidden;
 
@@ -78,15 +78,12 @@ body{
     left: -113px;
     width: 220px;
     height: 170px;
+    transition: transform 0.8s ease-in-out;
 }
 .box:hover{
-    animation: flip .8s infinite alternate;
+    transform: translateY(-20px);
 }
-@keyframes flip{
-    to{
-        transform: translateY(-20px);
-    }
-}
+
 
 /* faq section */
 .faq-section{
