--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: linear-gradient(45deg, var(--Soft-violet),var(--Soft-blue));
+    background-image: linear-gradient(to bottom, var(--Soft-violet),var(--Soft-blue));
     font-family: var(--font-main);
     font-size: 12px;
 }
@@ -54,7 +54,6 @@ body{
 
 .bg{
     background-image: url(images/bg-pattern-desktop.svg);
-    /* background-size: cover; */
     background-repeat: no-repeat;
     width: 100%;
     height: 543px;
@@ -71,7 +70,6 @@ body{
 }
 .box{
     background-image: url(images/illustration-box-desktop.svg);
-    /* background-size: cover; */
     background-repeat: no-repeat;
     position: absolute;
     top: 39%;
